@@ -27,6 +27,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
   b - fix the prevent pbs_server from hanging when doing server to server job moves.
   b - No longer report a completion code if a job is pre-empted using qrerun. 
   c - In some rare cases, TORQUE loads a job with no groups. Do not crash in this case.
+  b - Merged revision 5236 from 2.5-fixes. To accommodate this fix I had to modify the 
+      signature of job_recov to add a momport so job_recov could properly write to job_save.
 
 3.0.2
   c - check if the file pointer to /dev/console can be opened. If not, don't attempt to write it
